--- a/application/modules/backend/views/layout/layout.phtml
+++ b/application/modules/backend/views/layout/layout.phtml
@@ -58,6 +58,9 @@ $userRoleName = $helperUserRole->userRole();
 
     <link rel="stylesheet" href="/tools/fancybox2.1.4/jquery.fancybox.css" type="text/css" media="screen" charset="utf-8"/>
     <script src="/tools/fancybox2.1.4/jquery.fancybox.js" type="text/javascript" charset="utf-8"></script>
+    
+    <link rel="stylesheet" href="/theme/backend/css/jtreetable/jquery.treetable.css" type="text/css" media="screen" charset="utf-8"/>
+    <script src="/theme/backend/js/jtreetable/jquery.treetable.js" type="text/javascript" charset="utf-8"></script>
 
     <?= $this->partial('yui.phtml'); ?>
     <?php if (Default_Model_DbTable_MemberRole::ROLE_NAME_STAFF == $userRoleName) : ?>
