--- a/application/modules/backend/views/scripts/vcategories/index.phtml
+++ b/application/modules/backend/views/scripts/vcategories/index.phtml
@@ -68,6 +68,28 @@
     <p class="validateTips">All form fields are required.</p>
 
     <form id="add-subcat-form" class="jtable-dialog-form jtable-create-form">
+        
+        <!--
+        <div class="jtable-input-field-container">
+            <div class="jtable-input-label">Real Cat Id</div>
+            <div class="jtable-input jtable-textarea-input">
+                <select id="subcat-project_category_id" name="project_category_id">
+                    <?php 
+                        $list = $this->realCatList;
+                        if(isset($list)) {
+                            foreach ($list as $key => $value) {
+                                print_r('<opton value="'. $value .'">' . $key. '</option>');
+                            }
+                        } else {
+                            print_r('<opton value="">Leer</option>');
+                        }
+                    
+                    
+                    ?>
+                </select>
+            </div>
+        </div>
+        -->
         <div class="jtable-input-field-container">
             <div class="jtable-input-label">Title</div>
             <div class="jtable-input jtable-textarea-input">
@@ -190,7 +212,7 @@
             actions: {
                 listAction: '/backend/vcategories/list',
                 createAction: '/backend/vcategories/create',
-                //updateAction: '/backend/categories/update',
+                updateAction: '/backend/vcategories/update',
                 updateAction: function (postData) {
 //                console.log("updating from custom function...");
                     return $.Deferred(function ($dfd) {
@@ -212,11 +234,12 @@
                 deleteAction: '/backend/vcategories/delete'
             },
             fields: {
-                v_category_id: {
-                    title: 'V Cat ID',
+                v_parent_id_show: {
+                    title: 'V Parent Cat ID',
                     key: true,
                     create: false,
                     edit: false,
+                    list: true,
                     width: '1%'
                 },
                 v_parent_id: {
@@ -224,17 +247,25 @@
                     key: true,
                     create: false,
                     edit: false,
-                    width: '1%'
+                    list: false,
+                    width: '1%',
+                    options: function (data) {
+                        data.clearCache();
+                        if (data.source == 'edit') {
+                            return '/backend/vcategories/tree?c=' + data.record.v_parent_id;
+                        }
+                        return '/backend/vcategories/tree?c=0';
+                    }
                 },
-                project_category_id: {
-                    title: 'Real Cat ID',
+                v_category_id: {
+                    title: 'V Cat ID',
                     key: true,
                     create: false,
                     edit: false,
                     width: '1%'
                 },
                 title_show: {
-                    title: 'Title',
+                    title: 'Virtual Title',
                     create: false,
                     edit: false,
                     list: true,
@@ -245,6 +276,33 @@
                     create: true,
                     edit: true,
                     list: false
+                },
+                title_real: {
+                    title: 'Real Title',
+                    create: false,
+                    edit: false,
+                    list: true
+                },
+                project_category_id_show: {
+                    title: 'Real Cat ID',
+                    create: false,
+                    edit: false,
+                    list: true,
+                    width: '1%'
+                },
+                project_category_id: {
+                    title: 'Real Cat ID',
+                    create: true,
+                    edit: true,
+                    list: false,
+                    width: '1%',
+                    options: function (data) {
+                        data.clearCache();
+                        if (data.source == 'edit') {
+                            return '/backend/vcategories/treereal?c=' + data.record.project_category_id;
+                        }
+                        return '/backend/vcategories/treereal?c=0';
+                    }
                 },
                 created_at: {
                     title: 'Created',
