--- a/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
@@ -58,14 +58,14 @@ $helperImage = new Default_View_Helper_Image();
               	$description = Default_Model_HtmlPurify::purify($object_text);
            	?>
             <h3><a href="<?= $helperBuildProductUrl->buildProductUrl($this->project_id) ?>"><?php echo $this->title; ?> <?php echo $version; ?></a><span  style="font-weight: normal; font-size: small; color: #4e4e4e"> added </span><span  style="font-weight: 700; font-size: small; color: #4e4e4e"><?= $addedOnText ?> ago</span><span style="font-weight: 700; font-size: small; float: right; color: #4e4e4e"> <?= $updatedOnText ?> ago</span><span style="font-weight: normal; font-size: small; float: right; color: #4e4e4e">updated&nbsp;</span></h3>
-            
+
         </div>
         <!-- /title -->
         <!-- info -->
         <div class="info">
             <ul>
                 <li><span>in</span><span><?php echo $this->catTitle; ?></span></li>
-                
+
                 <?php /**<li><span><?= $this->translate('supporters') ?> </span><span><?= $plingData['plingers'] ?></span></li>
                 <li><span><?= $this->translate('collected') ?> </span><span><?= $plingData['plings'] ?></span></li> **/?>
             </ul>
@@ -112,9 +112,9 @@ $helperImage = new Default_View_Helper_Image();
                 <a role="button" href="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'edit') ?>" class="btn btn-native">
                     <?= $this->translate('Edit') ?>
                 </a>
-                
-                
-                   
+
+
+
                 <!-- ppload -->
                 <a role="button" class="btn btn-native" href="#modal-ppload"
                    data-toggle="modal"
@@ -126,10 +126,8 @@ $helperImage = new Default_View_Helper_Image();
                    data-updatepploadfile-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'updatepploadfile') ?>"
                    data-updatepackagetype-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'updatepackagetype') ?>"
                    data-deletepploadfile-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'deletepploadfile') ?>"
-                   data-deletepploadfiles-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'deletepploadfiles') ?>"
-                   data-finalizepploadcollection-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id,
-                       'finalizepploadcollection') ?>"><?= $this->translate('Files') ?>
-                    (<?= $productFileInfos['fileCount'] ?>)
+                   data-deletepploadfiles-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'deletepploadfiles') ?>">
+                    <?= $this->translate('Files') ?> (<?= $productFileInfos['fileCount'] ?>)
                 </a>
                 <!-- /ppload -->
                 <!-- updates -->
@@ -161,7 +159,7 @@ $helperImage = new Default_View_Helper_Image();
     <!-- CONTENT -->
     <!-- MODALS -->
 
-    
+
     <!-- button code modal -->
     <?php /*
     <div id="modal-button-code-<?= $loopProductId ?>" class="code-embed-modal modal fade">
@@ -188,7 +186,7 @@ $helperImage = new Default_View_Helper_Image();
         </div>
     </div>*/ ?>
     <!-- /button code modal -->
-    
+
 
     <!-- box code modal -->
     <div id="modal-box-code-<?= $loopProductId ?>" class="code-embed-modal modal fade">
@@ -271,7 +269,7 @@ $helperImage = new Default_View_Helper_Image();
             </div>
         </div>
     </div>
-    */ 
+    */
     ?>
     <!-- /widget code modal -->
 
