--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -52,7 +52,7 @@
 
                      <div data-ppload-api-uri="<?= PPLOAD_API_URI ?>"
                           <? /*
-                          // FIXME: Remove the mark '!' from ppload_collection_id in DB. Because torrent download feature (finalize files) has already dropped.
+                          // FIXME: https://github.com/pling-us/pling-tickets/issues/295
                           */ ?>
                           data-ppload-collection-id="<?= ltrim($this->product->ppload_collection_id, '!') ?>"
                           data-xdg-type="<?= $xdgType ?>">
@@ -102,7 +102,7 @@
              <div class="item active" style="max-width: 800px; max-height: 550px; margin:0 auto; display: none" id="carouselPPlay">
                      <div data-ppload-api-uri="<?= PPLOAD_API_URI ?>"
                           <? /*
-                          // FIXME: Remove the mark '!' from ppload_collection_id in DB. Because torrent download feature (finalize files) has already dropped.
+                          // FIXME: https://github.com/pling-us/pling-tickets/issues/295
                           */ ?>
                           data-ppload-collection-id="<?= ltrim($this->product->ppload_collection_id, '!') ?>">
 
