--- a/application/modules/default/views/layout/flat_ui_template.phtml
+++ b/application/modules/default/views/layout/flat_ui_template.phtml
@@ -33,22 +33,18 @@
     <link rel="stylesheet" type="text/css" href="/theme/flatui/css/tooltipster-light-customized.css" />
     
     <!-- Loading Bootstrap -->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="/theme/flatui/css/bootstrap/bootstrap.min.css" type="text/css"  crossorigin="anonymous">
     <link rel="stylesheet" href="/tools/fancybox2.1.4/jquery.fancybox.css?v=2.1.4" type="text/css" media="screen" />    
-
+    <link rel="stylesheet" href="/theme/flatui/css/fontawsome/font-awesome.min.css"  crossorigin="anonymous">
+    
     <!-- custom styles -->
     <link href="/theme/flatui/css/flex-layout.css" rel="stylesheet">
     <link href="/theme/flatui/css/style.css" rel="stylesheet">
     <link href="/theme/flatui/css/stylesheet.css?<?= APPLICATION_VERSION ?>" rel="stylesheet">
 
-    <!-- third party -->
-    <link href="/theme/flatui/css/bootstrap/colorpicker/css/bootstrap-colorpicker.min.css" rel="stylesheet">
-    <link href="/theme/flatui/css/colorbox.css" media="screen" rel="stylesheet" type="text/css"/>
-    <link href="/theme/flatui/css/ui.fancytree.min.css" rel="stylesheet" type="text/css">
+
     <link href="/theme/flatui/css/jquery.step.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/flatui/css/bootstrap/bootstrap-dialog.min.css" type="text/css" media="screen"/>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+    
 
     <link rel="SHORTCUT ICON" href="<?=$this->template['favicon']?>"/>
 
@@ -57,20 +53,17 @@
     <script src="/theme/flatui/js/lib/html5shiv.js"></script>
     <![endif]-->
 
-    <script
-            src="//code.jquery.com/jquery-3.2.1.min.js"
-            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
-    
+    <script src="/theme/flatui/js/lib/jquery-3.3.1.min.js" ></script>
+    <script src="/theme/flatui/js/lib/bootstrap.min.js" ></script>    
     <script type="text/javascript" src="/theme/flatui/js/lib/tooltipster/dist/js/tooltipster.bundle.min.js"></script>
 </head>
 <body>
+
 <?php echo $this->render('partials/header/template.phtml'); ?>
 <?php echo $this->render('partials/flashMessage.phtml'); ?>
 <?php echo $this->layout()->content; ?>
 <?php echo $this->render('partials/footer/template.phtml'); ?>
+
 
 <div id="overlays" class="" tabindex="-1" role="dialog"><?php if (isset($this->overlay)) {
         echo $this->overlay;
@@ -98,16 +91,16 @@
 <?php echo $this->render('partials/genericModalConfirmation.phtml'); ?>
 
 <!-- Load JS here for greater good =============================-->
+<?php /*
+<script src="/theme/flatui/js/lib/angular.min.js"></script>  
+<script src="/theme/flatui/js/lib/bootstrap-colorpicker-module.js"></script>
+
+*/
+?>
 
 <script src="/theme/flatui/js/lib/jquery.crypt.js"></script>
-<script src="/theme/flatui/js/lib/bootstrap-colorpicker-module.js"></script>
 <script src="/theme/flatui/js/lib/bootstrap-dialog.min.js"></script>
-<script src="/theme/flatui/js/lib/masonry.pkgd.min.js"></script>
-
-<script
-        src="//code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-        integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
-        crossorigin="anonymous"></script>
+<script src="/theme/flatui/js/lib/masonry.pkgd.min.js"></script>  
 <script src="/theme/flatui/js/lib/jquery.colorbox-min.js"></script>
 <script src="/theme/flatui/js/lib/jquery.placeholder.min.js"></script>
 <script src="/theme/flatui/js/lib/jquery.form.min.js"></script>
@@ -117,12 +110,15 @@
 <script src="/theme/flatui/js/lib/jquery.fancytree-all.min.js"></script>
 <script src="/theme/flatui/js/lib/jquery.validate.min.js"></script>
 <script src="/theme/flatui/js/lib/additional-methods.min.js"></script>
-<script src="/theme/flatui/js/lib/jquery.steps.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
+<script src="/theme/flatui/js/lib/jquery.rss.js"></script>
 <script src="/theme/backend/js/jquery.cookie.js"></script>
 <script src="/tools/md5.js"></script>
+
+<script src="/theme/flatui/js/lib/jquery.steps.min.js"></script>
+<script src="/theme/flatui/js/lib/jquery-ui.min.js"></script>
+
+<script src="/theme/flatui/js/lib/moment.min.js"></script>
 <script type="text/javascript" src="/tools/fancybox2.1.4/jquery.fancybox.pack.js?v=2.1.4"></script>
-<script src="/theme/flatui/js/lib/jquery.rss.js"></script>
 <script src="/theme/flatui/js/script.js?<?= APPLICATION_VERSION ?>"></script>
 
 <?php
